syntax = "proto3";

import "com/improving/common/common_domain.proto";
import "com/improving/event/domain/event_context_domain.proto";


package com.improving.eventcontext.event;

message Event {
    EventId eventId = 1;
    EventInfo info = 2;
    EventMetaInfo meta = 3;
    EventStatus status = 4;
}

message EventState {
    Event event = 1;
}
